--- a/src/app.css
+++ b/src/app.css
@@ -2,6 +2,9 @@
 @plugin '@tailwindcss/forms';
 @plugin '@tailwindcss/typography';
 
-body {
-  @apply bg-gray-100 text-gray-900;
+
+@layer base {
+  body {
+    @apply text-gray-200;
+  }
 }
